- Fix: set java to version 17